--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,94 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    
+    <aside class='social'>
+        <a href="#" class="social_icon"><img src="icons/social/vk.svg" alt="vkontakte"></a>
+        <a href="#" class="social_icon"><img src="icons/social/ok.svg" alt="odnoklasniki"></a>
+        <a href="#" class="social_icon"><img src="icons/social/inst.svg" alt="instagram"></a>
+        <a href="#" class="social_icon"><img src="icons/social/git.svg" alt="github"></a>
+    </aside>
+    <div class="hamburger">
+        <span></span>
+        <span class="long"></span>
+        <span></span>
+    </div>
+    <div class="menu">
+        <div class="menu__wrapper">
+            <div class="menu__close">
+                <svg width="29" height="30" viewBox="0 0 29 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M17.1568 14.5231L28.4489 3.23075C29.1837 2.49623 29.1837 1.30861 28.4489 0.574085C27.7144 -0.160437 26.5267 -0.160437 25.7922 0.574085L14.4998 11.8665L3.20781 0.574085C2.47295 -0.160437 1.28567 -0.160437 0.551149 0.574085C-0.183716 1.30861 -0.183716 2.49623 0.551149 3.23075L11.8432 14.5231L0.551149 25.8155C-0.183716 26.55 -0.183716 27.7376 0.551149 28.4721C0.917206 28.8385 1.39852 29.0226 1.87948 29.0226C2.36045 29.0226 2.84141 28.8385 3.20781 28.4721L14.4998 17.1798L25.7922 28.4721C26.1586 28.8385 26.6396 29.0226 27.1205 29.0226C27.6015 29.0226 28.0825 28.8385 28.4489 28.4721C29.1837 27.7376 29.1837 26.55 28.4489 25.8155L17.1568 14.5231Z" fill="black"/>
+                </svg>
+            </div>
+            <ul class="menu__list">
+                <li class="menu__link"><a href="#">ПРО МЕНЯ</a></li>
+                <li class="menu__link"><a href="#">МОЙ ОПЫТ</a></li>
+                <li class="menu__link"><a href="#">МОИ НАВЫКИ</a></li>
+                <li class="menu__link"><a href="#">МОИ РАБОТЫ</a></li>
+                <li class="menu__link"><a href="#">ПРАЙС-ЛИСТ</a></li>
+                <li class="menu__link"><a href="#">КОНТАКТЫ</a></li>
+            </ul>
+        </div>
+        <div class="menu__overlay"></div>
+    </div>
+    <section class="promo">
+        <div class="container">
+            <h1 class="title title_fz16">Меня зовут Василий Климанов</h1>
+            <h2 class="title title_fz48">Я web-разработчик из города Ульяновск</h2>
+            <div class="promo__button-wrapper">
+                <div class="promo__button">
+                    <a href="#">Портфолио</a>
+                </div>
+                <div class="promo__button promo__button_crystal">
+                    <a href="">Про меня</a> 
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about">
+        <div class="container">
+            <div class="about__wrapper">
+                <div class="about__wrapper-img">
+                    <!-- <img src="img/main_photo.jpg" alt="my photo"> -->
+                </div>
+                <div class="about__wrapper-descr">
+                    <h2 class="title title_fz16">Про меня</h2>
+                    <h3 class="title title_fz36">Меня зовут Василий</h3>
+                    <div class="line"></div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit expedita facere magnam nisi corporis provident sint corrupti doloribus hic alias eveniet laudantium explicabo, repellendus quo sunt unde, recusandae quibusdam pariatur.</p>
+                    <div class="about__wrapper-skills">
+                        <div class="about__wrapper-skill">
+                            <div class="about__wrapper-skill-img">
+                                <img src="icons/about_me/web_development.svg" alt="">
+                            </div>
+                            <div class="about__wrapper-skill-descr">
+                                <h4>Web-разработка</h4>
+                                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae voluptas, cumque, beatae quos aliquid ipsa soluta, deserunt quasi id architecto illum dolores? Repudiandae placeat dolore officiis illo, illum laudantium ad.</span>
+                            </div>
+                        </div>
+                        <div class="about__wrapper-skill">
+                            <div class="about__wrapper-skill-img">
+                                <img src="icons/about_me/mobile_dev.svg" alt="">
+                            </div>
+                            <div class="about__wrapper-skill-descr">
+                                <h4>Разработка приложений</h4>
+                                <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe maiores molestiae, unde accusantium, repellat id natus est nemo officiis ratione harum atque autem, sequi beatae totam asperiores doloremque dolor iure?</span>
+                            </div>
+                        </div>
+                        <div class="about__wrapper-skill">
+                            <div class="about__wrapper-skill-img">
+                                <img src="icons/about_me/design.svg" alt="">
+                            </div>
+                            <div class="about__wrapper-skill-descr">
+                                <h4>UI/UX Design</h4>
+                                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quia ex, illum laudantium reiciendis incidunt porro, consectetur dolorem corrupti quidem, non eum! Tenetur iste pariatur perferendis eius deserunt hic earum.</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
