--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
                                 <img src="icons/about_me/web_development.svg" alt="">
                             </div>
                             <div class="about__wrapper-skill-descr">
-                                <h4>Web-разработка</h4>
+                                <h4 class="title">Web-разработка</h4>
                                 <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae voluptas, cumque, beatae quos aliquid ipsa soluta, deserunt quasi id architecto illum dolores? Repudiandae placeat dolore officiis illo, illum laudantium ad.</span>
                             </div>
                         </div>
@@ -115,7 +115,7 @@
                                 <img src="icons/about_me/mobile_dev.svg" alt="">
                             </div>
                             <div class="about__wrapper-skill-descr">
-                                <h4>Разработка приложений</h4>
+                                <h4 class="title">Разработка приложений</h4>
                                 <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe maiores molestiae, unde accusantium, repellat id natus est nemo officiis ratione harum atque autem, sequi beatae totam asperiores doloremque dolor iure?</span>
                             </div>
                         </div>
@@ -124,7 +124,7 @@
                                 <img src="icons/about_me/design.svg" alt="">
                             </div>
                             <div class="about__wrapper-skill-descr">
-                                <h4>UI/UX Design</h4>
+                                <h4 class="title">UI/UX Design</h4>
                                 <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quia ex, illum laudantium reiciendis incidunt porro, consectetur dolorem corrupti quidem, non eum! Tenetur iste pariatur perferendis eius deserunt hic earum.</span>
                             </div>
                         </div>
