add block, fix bugs
добавлены блоки опыт работы, скилы. 
Устранены выявленные баги в предыдущих блоках.

--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,6 @@
                     <a href="">Про меня</a> 
                 </div>
             </div>
-        </div>
     </section>
     <section class="about">
         <div class="container">
@@ -96,36 +95,48 @@
                     <!-- <img src="img/main_photo.jpg" alt="my photo"> -->
                 </div>
                 <div class="about__wrapper-descr">
-                    <h2 class="title title_fz16">Про меня</h2>
+                    <h2 class="title title_fz16 title_range">Про меня</h2>
                     <h3 class="title title_fz36">Меня зовут Василий</h3>
-                    <div class="line"></div>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit expedita facere magnam nisi corporis provident sint corrupti doloribus hic alias eveniet laudantium explicabo, repellendus quo sunt unde, recusandae quibusdam pariatur.</p>
+                    <div class="line line_left"></div>
+                    <p>Я родом из города Ульяновск. <br>
+                        С 2020 года активно изучаю Frontend разработку. <br>
+                        Мои основные преимущества : <br>
+                        технический и аналитический склад ума,стрессоустойчивость, исполнительность, дисциплинированность, инициативность, усидчивость.</p>
                     <div class="about__wrapper-skills">
                         <div class="about__wrapper-skill">
                             <div class="about__wrapper-skill-img">
-                                <img src="icons/about_me/web_development.svg" alt="">
+                                <img src="icons/about_me/web_development.svg" alt="web_development">
                             </div>
                             <div class="about__wrapper-skill-descr">
-                                <h4 class="title">Web-разработка</h4>
-                                <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vitae voluptas, cumque, beatae quos aliquid ipsa soluta, deserunt quasi id architecto illum dolores? Repudiandae placeat dolore officiis illo, illum laudantium ad.</span>
+                                <h4 class="title">Web-разработка и SEO</h4>
+                                <span>При разработке сайтов использую современные стандарты HTML5, CSS3 с учетом требований SEO оптимизации. Применяю JavaScript с использованием библиотек jQueri или native JavaScript. </span>
                             </div>
                         </div>
                         <div class="about__wrapper-skill">
                             <div class="about__wrapper-skill-img">
-                                <img src="icons/about_me/mobile_dev.svg" alt="">
+                                <img src="icons/about_me/mobile_dev.svg" alt="mobile_dev">
                             </div>
                             <div class="about__wrapper-skill-descr">
-                                <h4 class="title">Разработка приложений</h4>
-                                <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe maiores molestiae, unde accusantium, repellat id natus est nemo officiis ratione harum atque autem, sequi beatae totam asperiores doloremque dolor iure?</span>
+                                <h4 class="title">Мобильная адаптация</h4>
+                                <span>Разработка сайта веду с учетом адаптации под любой экран. Оптимизирую используемые изображений для ускорения загрузки сайта. Использую современные технологий адаптации Grid, Flex и сеток Bootstrap.</span>
                             </div>
                         </div>
                         <div class="about__wrapper-skill">
                             <div class="about__wrapper-skill-img">
-                                <img src="icons/about_me/design.svg" alt="">
+                                <img src="icons/about_me/git.svg" alt="git">
                             </div>
                             <div class="about__wrapper-skill-descr">
-                                <h4 class="title">UI/UX Design</h4>
-                                <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quia ex, illum laudantium reiciendis incidunt porro, consectetur dolorem corrupti quidem, non eum! Tenetur iste pariatur perferendis eius deserunt hic earum.</span>
+                                <h4 class="title">Git, Gulp и препроцесооры</h4>
+                                <span>Разработку веду с использованием системы управления версиями Git и планировщиком задач Gulp. Активно пользуюсь препроцесоорами Scss и Sass.</span>
+                            </div>
+                        </div>
+                        <div class="about__wrapper-skill">
+                            <div class="about__wrapper-skill-img">
+                                <img src="icons/about_me/block.svg" alt="block">
+                            </div>
+                            <div class="about__wrapper-skill-descr">
+                                <h4 class="title">БЭМ</h4>
+                                <span>Использую  компонентный подход к веб-разработке, в основе которого лежит принцип разделения интерфейса на независимые блоки.</span>
                             </div>
                         </div>
                     </div>
@@ -133,7 +144,282 @@
             </div>
         </div>
     </section>
+    <section class="exp">
+        <div class="container">
+            <h2 class="title title_fz16 title_range_center">Опыт</h2>
+            <span class="title title_fz36">Чем я буду полезен</span>
+            <div class="line"></div>
+            <div class="exp__wrapper">
+                <div class="exp__column">
+                    <h3 class="title title_fz20">Образование</h3>
+                    <div class="exp__card">
+                        <div class="exp__card-img">
+                            <img src="icons/about_me/univers.svg" alt="university">
+                        </div>
+                        <div class="exp__card-title">
+                            <h4 class="title title_fz14">УлГТУ</h4>
+                        </div>
+                        <div class="exp__card-subtitle">
+                            Диплом магистра | Ульяновск (2006-2011)
+                        </div>
+                        <div class="exp__card-descr">
+                            Закончил Ульяновский государственный технический университет по направлению "Проектирование и технология радиоэлектронных средств" с уклоном на автоматизацию технических процессов
+                        </div>
+                    </div>
+                    <div class="exp__card">
+                        <div class="exp__card-img">
+                            <img src="icons/about_me/univers.svg" alt="university">
+                        </div>
+                        <div class="exp__card-title">
+                            <h4 class="title title_fz14">Интернет</h4>
+                        </div>
+                        <div class="exp__card-subtitle">
+                            Дистанционное обучение (2020)
+                        </div>
+                        <div class="exp__card-descr">
+                            Активно изучал Web разработку и язык програмирование JavaScript.
+                        </div>
+                    </div>
+                </div>
+                <div class="exp__column">
+                    <h3 class="title title_fz20">Опыт работы</h3>
+                    <div class="exp__card">
+                        <div class="exp__card-img">
+                            <img src="icons/experience/university.svg" alt="university">
+                        </div>
+                        <div class="exp__card-title">
+                            <h4 class="title title_fz14">Студент</h4>
+                        </div>
+                        <div class="exp__card-subtitle">
+                           УлГТУ | Ульяновск (2010-2011)
+                        </div>
+                        <div class="exp__card-descr">
+                            В объеме магистерской диссертации разрабатывал программный продукт с использованием C# для синхронизации через API интерфейс MS Word, Mathcad, SolidWorks, Open Cascade.
+                            В команде вели разработку сайта с каталогом манги с возможностью скачки файлов с depositfiles, я отвечал за программную часть и структуру сайта.
+                        </div>
+                    </div>
+                    <div class="exp__card">
+                        <div class="exp__card-img">
+                            <img src="icons/about_me/soldier.svg" alt="soldier">
+                        </div>
+                        <div class="exp__card-title">
+                            <h4 class="title title_fz14">Военнослужащий</h4>
+                        </div>
+                        <div class="exp__card-subtitle">
+                            МО РФ | Ульяновск (2011-2020)
+                        </div>
+                        <div class="exp__card-descr">
+                            Создавал макросы для упрощения ведения документации и анализа данных с использованием Visual Basic встроенный в линейку продуктов Microsoft Office.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="skill">
+        <div class="container">
+            <h2 class="title title_fz16 title_center title_range_center">Навыки</h2>
+            <span class="title title_fz36 title_center">Что я использую в работе</span>
+            <div class="line"></div>
+            <div class="skill__card-wrapper">
+                <div class="skill__card">
+                    <div class="skill__card-img">
+                        <img src="icons/skills/html5.svg" alt="html5">
+                    </div>
+                    <div class="skill__card-title">
+                        <h3 class="title title_fz14">HTML5</h3>
+                    </div>
+                    <div class="skill__card-descr">
+                        Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более SEO-оптимизированную структуру вашего продукта
+                    </div>
+                </div>
+                <div class="skill__card">
+                    <div class="skill__card-img">
+                        <img src="icons/skills/css3.svg" alt="css3">
+                    </div>
+                    <div class="skill__card-title">
+                        <h3 class="title title_fz14">CSS3</h3>
+                    </div>
+                    <div class="skill__card-descr">
+                        Этот язык стилей позволяет мне создавать абсолютно любой внешний вид вашего сайта или приложения. Все ограничивается только вашей фантазией!
+                    </div>
+                </div>
+                <div class="skill__card">
+                    <div class="skill__card-img">
+                        <img src="icons/skills/sass.svg" alt="sass">
+                    </div>
+                    <div class="skill__card-title">
+                        <h3 class="title title_fz14">Препроцессоры CSS</h3>
+                    </div>
+                    <div class="skill__card-descr">
+                        Это надстройка над языком разметки CSS. Они облегчают работу написания стилей и обладают всеми возможностями CSS, но в добавок еще и своими.
+                    </div>
+                </div>
+                <div class="skill__card">
+                    <div class="skill__card-img">
+                        <img src="icons/skills/js.svg" alt="js">
+                    </div>
+                    <div class="skill__card-title">
+                        <h3 class="title title_fz14">Java Script</h3>
+                    </div>
+                    <div class="skill__card-descr">
+                        Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки, вкладки, получение данных от сервера и многое другое
+                    </div>
+                </div>
+                <div class="skill__card">
+                    <div class="skill__card-img">
+                        <img src="icons/skills/jquery.svg" alt="jquery">
+                    </div>
+                    <div class="skill__card-title">
+                        <h3 class="title title_fz14">Jquery</h3>
+                    </div>
+                    <div class="skill__card-descr">
+                        Библиотека Jquery позволит ускорить разработку. Без необходимости интегрировать в проект мы её не будем, но навык работы с ней присутствует
+                    </div>
+                </div>
+                <div class="skill__card">
+                    <div class="skill__card-img">
+                        <img src="icons/skills/bootstrap.com.svg" alt="bootstrap">
+                    </div>
+                    <div class="skill__card-title">
+                        <h3 class="title title_fz14">Bootstrap</h3>
+                    </div>
+                    <div class="skill__card-descr">
+                        Это инструментарий с открытым исходным кодом, который позволяет использовать переменные Sass и миксины, гибкую систему сеток.
+                    </div>
+                </div>
+                <div class="skill__card">
+                    <div class="skill__card-img">
+                        <img src="icons/skills/node.js.svg" alt="node.js">
+                    </div>
+                    <div class="skill__card-title">
+                        <h3 class="title title_fz14">Node.js</h3>
+                    </div>
+                    <div class="skill__card-descr">
+                        Эта платформа позволяет создавать бэкенд для вашего продукта - “мозги”, которые будут выполнять действия, которые пользователь не видит
+                    </div>
+                </div>
+                <div class="skill__card">
+                    <div class="skill__card-img">
+                        <img src="icons/skills/visual-studio-code.svg" alt="visual-studio-code">
+                    </div>
+                    <div class="skill__card-title">
+                        <h3 class="title title_fz14">Visual Studio Code</h3>
+                    </div>
+                    <div class="skill__card-descr">
+                        Редактор исходного кода, разработанный Microsoft для кроссплатформенной разработки веб- и облачных приложений. 
+                    </div>
+                </div>
+                <div class="skill__card">
+                    <div class="skill__card-img">
+                        <img src="icons/skills/git.svg" alt="git">
+                    </div>
+                    <div class="skill__card-title">
+                        <h3 class="title title_fz14">Git</h3>
+                    </div>
+                    <div class="skill__card-descr">
+                        Распределённая система управления версиями.  
+                    </div>
+                </div>
+                <div class="skill__card">
+                    <div class="skill__card-img">
+                        <img src="icons/skills/gulp.svg" alt="gulp">
+                    </div>
+                    <div class="skill__card-title">
+                        <h3 class="title title_fz14">Gulp</h3>
+                    </div>
+                    <div class="skill__card-descr">
+                        Это таск-менеджер для автоматического выполнения часто используемых задач, написанный на языке программирования JavaScript. 
+                    </div>
+                </div>
+                <div class="skill__card">
+                    <div class="skill__card-img">
+                        БЭМ
+                    </div>
+                    <div class="skill__card-title">
+                        <h3 class="title title_fz14">БЭМ</h3>
+                    </div>
+                    <div class="skill__card-descr">
+                        Компонентный подход к веб-разработке, в основе которого лежит принцип разделения интерфейса на независимые блоки. БЭМ используется в Яндексе для разработки фронтенда.
+                    </div>
+                </div>
+                <div class="skill__card">
+                    <div class="skill__card-img">
+                        <img src="icons/skills/photoshop.svg" alt="photoshop">
+                    </div>
+                    <div class="skill__card-title">
+                        <h3 class="title title_fz14">Photoshop</h3>
+                    </div>
+                    <div class="skill__card-descr">
+                        Многофункциональный графический редактор. В основном работает с растровыми изображениями.
+                    </div>
+                </div>
+                <div class="skill__card">
+                    <div class="skill__card-img">
+                        <img src="icons/skills/Zeplin.svg" alt="Zeplin">
+                    </div>
+                    <div class="skill__card-title">
+                        <h3 class="title title_fz14">Zeplin</h3>
+                    </div>
+                    <div class="skill__card-descr">
+                        Инструмент для совместной работы дизайнеров UI и фронтенд-разработчиков.
+                    </div>
+                </div>
+                <div class="skill__card">
+                    <div class="skill__card-img">
+                        <img src="icons/skills/Figma.svg" alt="Figma">
+                    </div>
+                    <div class="skill__card-title">
+                        <h3 class="title title_fz14">Figma</h3>
+                    </div>
+                    <div class="skill__card-descr">
+                        Инструмент для совместной работы дизайнеров UI и фронтенд-разработчиков.
+                    </div>
+                </div>
+            </div>
+            <div class="skill__progress">
+                <div class="skill__progress-wrapper">
+                    <div class="skill__progress-title">
+                        <h3 class="title title_fz14 title_range">Создание сайтов</h3>
+                    </div>
+                    <div class="skill__progress-pct">
+                        100%
+                    </div>
+                    <div class="skill__progress-band">
+                        <div class="skill__progress-done">
 
+                        </div>
+                    </div>
+                </div>
+                <div class="skill__progress-wrapper">
+                    <div class="skill__progress-title">
+                        <h3 class="title title_fz14 title_range">Создание сайтов</h3>
+                    </div>
+                    <div class="skill__progress-pct">
+                        100%
+                    </div>
+                    <div class="skill__progress-band">
+                        <div class="skill__progress-done">
+
+                        </div>
+                    </div>
+                </div>
+                <div class="skill__progress-wrapper">
+                    <div class="skill__progress-title">
+                        <h3 class="title title_fz14 title_range">Создание сайтов</h3>
+                    </div>
+                    <div class="skill__progress-pct">
+                        100%
+                    </div>
+                    <div class="skill__progress-band">
+                        <div class="skill__progress-done">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
