--- a/src/index.html
+++ b/src/index.html
@@ -221,8 +221,14 @@
             <h2 class="title title_fz16 title_center title_range_center">Навыки</h2>
             <span class="title title_fz36 title_center">Что я использую в работе</span>
             <div class="line"></div>
-            <div class="skill__card-wrapper">
-                <div class="skill__card">
+            <div class="skill__card">
+                <div class="skill__card-more skill__card-more-open ">
+                    ПОДРОБНЕЕ
+                </div>
+                <div class="skill__card-more skill__card-more-close skill__card-more_hide">
+                    СКРЫТЬ
+                </div>
+                <div class="skill__card-wrapper">
                     <div class="skill__card-img">
                         <img src="icons/skills/html5.svg" alt="html5">
                     </div>
@@ -233,7 +239,7 @@
                         Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более SEO-оптимизированную структуру вашего продукта
                     </div>
                 </div>
-                <div class="skill__card">
+                <div class="skill__card-wrapper">
                     <div class="skill__card-img">
                         <img src="icons/skills/css3.svg" alt="css3">
                     </div>
@@ -244,7 +250,7 @@
                         Этот язык стилей позволяет мне создавать абсолютно любой внешний вид вашего сайта или приложения. Все ограничивается только вашей фантазией!
                     </div>
                 </div>
-                <div class="skill__card">
+                <div class="skill__card-wrapper">
                     <div class="skill__card-img">
                         <img src="icons/skills/sass.svg" alt="sass">
                     </div>
@@ -255,7 +261,7 @@
                         Это надстройка над языком разметки CSS. Они облегчают работу написания стилей и обладают всеми возможностями CSS, но в добавок еще и своими.
                     </div>
                 </div>
-                <div class="skill__card">
+                <div class="skill__card-wrapper">
                     <div class="skill__card-img">
                         <img src="icons/skills/js.svg" alt="js">
                     </div>
@@ -266,7 +272,7 @@
                         Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки, вкладки, получение данных от сервера и многое другое
                     </div>
                 </div>
-                <div class="skill__card">
+                <div class="skill__card-wrapper">
                     <div class="skill__card-img">
                         <img src="icons/skills/jquery.svg" alt="jquery">
                     </div>
@@ -277,7 +283,7 @@
                         Библиотека Jquery позволит ускорить разработку. Без необходимости интегрировать в проект мы её не будем, но навык работы с ней присутствует
                     </div>
                 </div>
-                <div class="skill__card">
+                <div class="skill__card-wrapper">
                     <div class="skill__card-img">
                         <img src="icons/skills/bootstrap.com.svg" alt="bootstrap">
                     </div>
@@ -288,7 +294,7 @@
                         Это инструментарий с открытым исходным кодом, который позволяет использовать переменные Sass и миксины, гибкую систему сеток.
                     </div>
                 </div>
-                <div class="skill__card">
+                <div class="skill__card-wrapper">
                     <div class="skill__card-img">
                         <img src="icons/skills/node.js.svg" alt="node.js">
                     </div>
@@ -299,7 +305,7 @@
                         Эта платформа позволяет создавать бэкенд для вашего продукта - “мозги”, которые будут выполнять действия, которые пользователь не видит
                     </div>
                 </div>
-                <div class="skill__card">
+                <div class="skill__card-wrapper">
                     <div class="skill__card-img">
                         <img src="icons/skills/visual-studio-code.svg" alt="visual-studio-code">
                     </div>
@@ -310,7 +316,7 @@
                         Редактор исходного кода, разработанный Microsoft для кроссплатформенной разработки веб- и облачных приложений. 
                     </div>
                 </div>
-                <div class="skill__card">
+                <div class="skill__card-wrapper">
                     <div class="skill__card-img">
                         <img src="icons/skills/git.svg" alt="git">
                     </div>
@@ -321,7 +327,7 @@
                         Распределённая система управления версиями.  
                     </div>
                 </div>
-                <div class="skill__card">
+                <div class="skill__card-wrapper">
                     <div class="skill__card-img">
                         <img src="icons/skills/gulp.svg" alt="gulp">
                     </div>
@@ -332,7 +338,7 @@
                         Это таск-менеджер для автоматического выполнения часто используемых задач, написанный на языке программирования JavaScript. 
                     </div>
                 </div>
-                <div class="skill__card">
+                <div class="skill__card-wrapper">
                     <div class="skill__card-img">
                         БЭМ
                     </div>
@@ -343,7 +349,7 @@
                         Компонентный подход к веб-разработке, в основе которого лежит принцип разделения интерфейса на независимые блоки. БЭМ используется в Яндексе для разработки фронтенда.
                     </div>
                 </div>
-                <div class="skill__card">
+                <div class="skill__card-wrapper">
                     <div class="skill__card-img">
                         <img src="icons/skills/photoshop.svg" alt="photoshop">
                     </div>
@@ -354,7 +360,7 @@
                         Многофункциональный графический редактор. В основном работает с растровыми изображениями.
                     </div>
                 </div>
-                <div class="skill__card">
+                <div class="skill__card-wrapper">
                     <div class="skill__card-img">
                         <img src="icons/skills/Zeplin.svg" alt="Zeplin">
                     </div>
@@ -365,7 +371,7 @@
                         Инструмент для совместной работы дизайнеров UI и фронтенд-разработчиков.
                     </div>
                 </div>
-                <div class="skill__card">
+                <div class="skill__card-wrapper">
                     <div class="skill__card-img">
                         <img src="icons/skills/Figma.svg" alt="Figma">
                     </div>
