--- a/src/index.html
+++ b/src/index.html
@@ -47,10 +47,10 @@
 </head>
 <body>
     <aside class='social'>
-        <a href="#" class="social_icon"><img src="icons/social/vk.svg" alt="vkontakte"></a>
-        <a href="#" class="social_icon"><img src="icons/social/ok.svg" alt="odnoklasniki"></a>
-        <a href="#" class="social_icon"><img src="icons/social/inst.svg" alt="instagram"></a>
-        <a href="#" class="social_icon"><img src="icons/social/git.svg" alt="github"></a>
+        <a href="https://vk.me/basonsan" class="social_icon"><img src="icons/social/vk.svg" alt="vkontakte"></a>
+        <a href="https://ok.ru/basonsan" class="social_icon"><img src="icons/social/ok.svg" alt="odnoklasniki"></a>
+        <a href="https://www.instagram.com/basonsan" class="social_icon"><img src="icons/social/inst.svg" alt="instagram"></a>
+        <a href="https://github.com/basonsan" class="social_icon"><img src="icons/social/git.svg" alt="github"></a>
     </aside>
     <div class="hamburger">
         <span></span>
@@ -77,14 +77,16 @@
     </div>
     <section class="promo">
         <div class="container">
-            <h1 class="title title_fz16">Меня зовут Василий Климанов</h1>
-            <h2 class="title title_fz48">Я web-разработчик из города Ульяновск</h2>
-            <div class="promo__button-wrapper">
-                <div class="promo__button">
-                    <a href="#">Портфолио</a>
-                </div>
-                <div class="promo__button promo__button_crystal">
-                    <a href="">Про меня</a> 
+            <div class="promo__wrapper">
+                <h1 class="title title_fz16">Меня зовут Василий Климанов</h1>
+                <h2 class="title title_fz48">Я web-разработчик из города Ульяновск</h2>
+                <div class="promo__button-wrapper">
+                    <div class="btn">
+                        <a href="#">Портфолио</a>
+                    </div>
+                    <div class="btn btn_crystal">
+                        <a href="">Про меня</a> 
+                    </div>
                 </div>
             </div>
     </section>
@@ -92,16 +94,16 @@
         <div class="container">
             <div class="about__wrapper">
                 <div class="about__wrapper-img">
-                    <!-- <img src="img/main_photo.jpg" alt="my photo"> -->
+                    <img src="img/main_photo.jpg" alt="my photo">
                 </div>
                 <div class="about__wrapper-descr">
                     <h2 class="title title_fz16 title_range">Про меня</h2>
                     <h3 class="title title_fz36">Меня зовут Василий</h3>
                     <div class="line line_left"></div>
                     <p>Я родом из города Ульяновск. <br>
-                        С 2020 года активно изучаю Frontend разработку. <br>
+                        Активно увлекаюсь WEB-разработкой и програмированием. <br>
                         Мои основные преимущества : <br>
-                        технический и аналитический склад ума,стрессоустойчивость, исполнительность, дисциплинированность, инициативность, усидчивость.</p>
+                        стрессоустойчивость, исполнительность, дисциплинированность, инициативность, усидчивость.</p>
                     <div class="about__wrapper-skills">
                         <div class="about__wrapper-skill">
                             <div class="about__wrapper-skill-img">
@@ -222,7 +224,7 @@
             <span class="title title_fz36 title_center">Что я использую в работе</span>
             <div class="line"></div>
             <div class="skill__card">
-                <div class="skill__card-more skill__card-more-open ">
+                <div class="skill__card-more skill__card-more-open">
                     ПОДРОБНЕЕ
                 </div>
                 <div class="skill__card-more skill__card-more-close skill__card-more_hide">
@@ -383,7 +385,7 @@
                     </div>
                 </div>
             </div>
-            <div class="skill__progress">
+            <!-- <div class="skill__progress">
                 <div class="skill__progress-wrapper">
                     <div class="skill__progress-title">
                         <h3 class="title title_fz14 title_range">Создание сайтов</h3>
@@ -422,9 +424,102 @@
 
                         </div>
                     </div>
+                </div>
+            </div> -->
+            
+        </div>
+    </section>
+    <section class="works">
+        <div class="container">
+            <h2 class="title title_fz16 title_center title_range_center">Портфолио</h2>
+            <span class="title title_fz36 title_center">Мои работы</span>
+            <div class="line"></div>
+            <div class="works__wrapper">
+                <div class="works__img">
+                    <a href="#"><img src="img/works/uber.jpg" alt="uber"></a>
+                </div>
+                <div class="works__img">
+                    <a href="#"><img src="img/works/pulse.jpg" alt="pulse"></a>
+                </div>
+                <div class="works__img">
+                    <a href="#"><img src="img/works/bread.jpg" alt="bread"></a>
+                </div>
+                <div class="works__img vertical">
+                    <a href="#"><img src="img/works/plans.jpg" alt="ipad"></a>
+                </div>
+                <div class="works__img">
+                    <a href="#"><img src="img/works/ipad.jpg" alt="plans"></a>
+                </div>
+                <div class="works__img horizon">
+                    <a href="#"><img src="img/works/mac.jpg" alt="mac"></a>
                 </div>
             </div>
         </div>
+    </section>
+    <!-- <section class="price">
+        <div class="container">
+            <h2 class="title title_fz16 title_center title_range_center">Прайс лист</h2>
+            <div class="line"></div>
+            <div class="price__wrapper">
+                <div class="price__wrapper-item">
+                    <h3 class="title title fz14 price__wrapper-item-name">Landing-page</h3>
+                    <span class="title title fz14 price__wrapper-item-count">от 8000 руб.</span>
+                    <span class="price__wrapper-item-descr">Одностраничный сайт для презентации услуг/товаров/...</span>
+                </div>
+                <div class="price__wrapper-item">
+                    <h3 class="title title fz14 price__wrapper-item-name">Landing-page</h3>
+                    <span class="title title fz14 price__wrapper-item-count">от 8000 руб.</span>
+                    <span class="price__wrapper-item-descr">Одностраничный сайт для презентации услуг/товаров/...</span>
+                </div>
+                <div class="price__wrapper-item">
+                    <h3 class="title title fz14 price__wrapper-item-name">Landing-page</h3>
+                    <span class="title title fz14 price__wrapper-item-count">от 8000 руб.</span>
+                    <span class="price__wrapper-item-descr">Одностраничный сайт для презентации услуг/товаров/...</span>
+                </div>
+            </div>
+        </div>
+    </section>           -->
+    <section class="contact">
+        <div class="container">
+            <div class="contact__wrapper">
+                <div class="contact__wrapper-img">
+                    <img src="img/main_photo.jpg" alt="my photo">
+                </div>
+                <div class="contact__wrapper-descr">
+                    <h2 class="title title_fz16 title_range">Контакты</h2>
+                    <h3 class="title title_fz36">Свяжитесь со мной</h3>
+                    <div class="line line_left"></div>
+                    <div class="title title_fz14">Любым удобным для вас способом:</div>
+                    <div class="contact__social">
+                        <a href="https://vk.me/basonsan"><img src="icons/social/vk.svg" alt="vk"></a>
+                        <a href="https://ok.ru/basonsan"><img src="icons/social/ok.svg" alt="ok"></a>
+                        <a href="https://www.instagram.com/basonsan"><img src="icons/social/inst.svg" alt="inst"></a>
+                        <a href="https://wa.me/79374580720"><img src="icons/social/whatsapp.svg" alt="whatsapp"></a>
+                        <a href="https://viber.click/79374580720"><img src="icons/social/viber.svg" alt="viber"></a>
+                        <a href="https://tlgg.ru/basonsan"><img src="icons/social/teleg.svg" alt="teleg"></a>
+                        <a href="mailto:basonsan@yandex.ru"><img src="icons/social/mail.svg" alt="teleg"></a>
+                    </div>
+                    <div class="title title_fz14 contact__text">Или оставьте ваши данные и я сам вам напишу:</div>
+                    <form class="form" action="#">
+                        <div class="form__wrapper">
+                            <input name="name" id="name" type="text">
+                            <label for="name">Ваше имя</label>
+                        </div>
+                        <div class="form__wrapper">
+                            <input name="email" id="email" type="email">
+                            <label for="name">Ваша почта</label>
+                        </div>
+                        <div class="form__wrapper form_horizon">
+                            <textarea name="text" id="text" type="text"></textarea>
+                            <label for="text">Ваше сообщение</label>
+                        </div>
+                        <div class="form__btn">
+                            <button class="btn form__btn">Отправить сообщение</button>
+                        </div>
+
+                    </form>
+                </div>  
+            </div>
     </section>
     <script src="js/script.js"></script>
 </body>
