--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,14 @@
     <meta property="og:url" content="https://metatags.io/">
     <meta property="og:title" content="Разработка сайтов - Василий Климанов">
     <meta property="og:description" content="Быстрая и качественная разработка сайтов под ключ в Ульяновске и не только">
-    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="og:image" content="img/metatags.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://metatags.io/">
     <meta property="twitter:title" content="Разработка сайтов - Василий Климанов">
     <meta property="twitter:description" content="Быстрая и качественная разработка сайтов под ключ в Ульяновске и не только">
-    <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="twitter:image" content="img/metatags.jpg">
     
     <!-- Favicon  -->
     <link rel="apple-touch-icon" sizes="57x57" href="icons/favicon//apple-icon-57x57.png">
