adaptation, fix bugs
адаптировал под мобильные устройства, убрал баги выявленные в ходе адаптации

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
         <a href="https://www.instagram.com/basonsan" class="social_icon"><img src="icons/social/inst.svg" alt="instagram"></a>
         <a href="https://github.com/basonsan" class="social_icon"><img src="icons/social/git.svg" alt="github"></a>
     </aside>
-    <div class="hamburger">
+    <!-- <div class="hamburger">
         <span></span>
         <span class="long"></span>
         <span></span>
@@ -89,7 +89,7 @@
                     </div>
                 </div>
             </div>
-    </section>
+    </section> -->
     <section class="about">
         <div class="container">
             <div class="about__wrapper">
@@ -385,48 +385,6 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="skill__progress">
-                <div class="skill__progress-wrapper">
-                    <div class="skill__progress-title">
-                        <h3 class="title title_fz14 title_range">Создание сайтов</h3>
-                    </div>
-                    <div class="skill__progress-pct">
-                        100%
-                    </div>
-                    <div class="skill__progress-band">
-                        <div class="skill__progress-done">
-
-                        </div>
-                    </div>
-                </div>
-                <div class="skill__progress-wrapper">
-                    <div class="skill__progress-title">
-                        <h3 class="title title_fz14 title_range">Создание сайтов</h3>
-                    </div>
-                    <div class="skill__progress-pct">
-                        100%
-                    </div>
-                    <div class="skill__progress-band">
-                        <div class="skill__progress-done">
-
-                        </div>
-                    </div>
-                </div>
-                <div class="skill__progress-wrapper">
-                    <div class="skill__progress-title">
-                        <h3 class="title title_fz14 title_range">Создание сайтов</h3>
-                    </div>
-                    <div class="skill__progress-pct">
-                        100%
-                    </div>
-                    <div class="skill__progress-band">
-                        <div class="skill__progress-done">
-
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-            
         </div>
     </section>
     <section class="works">
@@ -456,29 +414,6 @@
             </div>
         </div>
     </section>
-    <!-- <section class="price">
-        <div class="container">
-            <h2 class="title title_fz16 title_center title_range_center">Прайс лист</h2>
-            <div class="line"></div>
-            <div class="price__wrapper">
-                <div class="price__wrapper-item">
-                    <h3 class="title title fz14 price__wrapper-item-name">Landing-page</h3>
-                    <span class="title title fz14 price__wrapper-item-count">от 8000 руб.</span>
-                    <span class="price__wrapper-item-descr">Одностраничный сайт для презентации услуг/товаров/...</span>
-                </div>
-                <div class="price__wrapper-item">
-                    <h3 class="title title fz14 price__wrapper-item-name">Landing-page</h3>
-                    <span class="title title fz14 price__wrapper-item-count">от 8000 руб.</span>
-                    <span class="price__wrapper-item-descr">Одностраничный сайт для презентации услуг/товаров/...</span>
-                </div>
-                <div class="price__wrapper-item">
-                    <h3 class="title title fz14 price__wrapper-item-name">Landing-page</h3>
-                    <span class="title title fz14 price__wrapper-item-count">от 8000 руб.</span>
-                    <span class="price__wrapper-item-descr">Одностраничный сайт для презентации услуг/товаров/...</span>
-                </div>
-            </div>
-        </div>
-    </section>           -->
     <section class="contact">
         <div class="container">
             <div class="contact__wrapper">
@@ -520,7 +455,6 @@
                                 <span>Я согласен(а) с <a target="blank" href="/policy.html">политикой конфиденциальности</a></span>
                             </div>
                         </div>
-
                     </form>
                 </div>  
             </div>
