fix figma & zelp icon

--- a/src/index.html
+++ b/src/index.html
@@ -364,7 +364,7 @@
                 </div>
                 <div class="skill__card-wrapper">
                     <div class="skill__card-img">
-                        <img src="icons/skills/Zeplin.svg" alt="Zeplin">
+                        <img src="icons/skills/zeplin.svg" alt="Zeplin">
                     </div>
                     <div class="skill__card-title">
                         <h3 class="title title_fz14">Zeplin</h3>
@@ -375,7 +375,7 @@
                 </div>
                 <div class="skill__card-wrapper">
                     <div class="skill__card-img">
-                        <img src="icons/skills/Figma.svg" alt="Figma">
+                        <img src="icons/skills/figma.svg" alt="Figma">
                     </div>
                     <div class="skill__card-title">
                         <h3 class="title title_fz14">Figma</h3>
